Clean up AbstractRIBSupport.processDestination()
Annotate arguments as @NonNull and update all implementations to
consistently do the same thing -- most notably not checking if
destination is null.

JIRA: BGPCEP-1110
Change-Id: I853f3e2b61dfcd6533f4364b7fe482be308dd18b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>